--- a/portfolio.html
+++ b/portfolio.html
@@ -12,26 +12,32 @@
 </head>
 <body>
     <!--Header which includes the logo and navigation links-->
-    <header>
-        <div class="header-content">
+    <nav class="navbar navbar-light bg-light">
+        <div class="container">
             <!--Logo Div-->
             <div class="logo">
                 <h1>Ryan Udugampola</h1>
             </div>
     
             <!--Navigation Links-->
-            <nav>
-                <a href="index.html">About</a>| 
-                <a href="portfolio.html">Portfolio</a>| 
-                <a href="contact.html">Contact</a>
-            </nav>
+            <ul class="nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="index.html">About</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="portfolio.html">Portfolio</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="contact.html">Contact</a>
+                </li>
+            </ul>
         </div>
-    </header>
+    </nav>
 
     <!--Main Container-->
-    <div class="main-container">
+    <div class="container-fluid">
         <!--Content Container-->
-        <div class="content-container">
+        <div class="container">
             <!--Page Title at the top left of every content-container-->
             <div class="content-title">
                 <h1>Portfolio</h1>
