--- a/contact.html
+++ b/contact.html
@@ -7,14 +7,15 @@
     <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">    
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <title>Ryan Udugampola - Portfolio</title>
 </head>
 <body>
     <!--Header which includes the logo and navigation links-->
-    <nav class="navbar navbar-light bg-light">
+    <nav class="navbar">
         <div class="container">
             <!--Logo Div-->
-            <div class="logo">
+            <div class="navbar-brand">
                 <h1>Ryan Udugampola</h1>
             </div>
     
@@ -34,32 +35,34 @@
     </nav>
 
     <!--Main Container-->
-    <div class="container-fluid">
-            <!--Content Container-->
-            <div class="container">
-                <!--Page Title at the top left of every content-container-->
-                <div class="content-title">
-                    <h1>Contact</h1>
-                </div>
-                <form>
-                    <div class="form-group">
-                        <label for="Name">Name</label>
-                        <input type="text" class="form-control" id="name" placeholder="John Smith">
-                    </div>
-                    <div class="form-group">
-                        <label for="Email">Email</label>
-                        <input type="email" class="form-control" id="email" placeholder="example@gmail.com">
-                    </div>
-                    <div class="form-group">
-                        <label for="Message">Message</label>
-                        <textarea class="form-control" id="message" rows="10"></textarea>
-                    </div>
-                    <button type="button" class="btn btn-primary">Submit</button>
-                </form>
+    <div class="content">
+        <!--Content Container-->
+        <div class="container">
+            <!--Page Title at the top left of every content-container-->
+            <div class="content-title">
+                <h1>Contact</h1>
             </div>
+            <form>
+                <div class="form-group">
+                    <label for="Name">Name</label>
+                    <input type="text" class="form-control" id="name" placeholder="John Smith">
+                </div>
+                <div class="form-group">
+                    <label for="Email">Email</label>
+                    <input type="email" class="form-control" id="email" placeholder="example@gmail.com">
+                </div>
+                <div class="form-group">
+                    <label for="Message">Message</label>
+                    <textarea class="form-control" id="message" rows="10"></textarea>
+                </div>
+                <button type="button" class="btn btn-primary">Submit</button>
+            </form>
         </div>
-    <footer>
-        Copyright <i class="far fa-copyright"></i>
+    </div>
+    <footer class="footer">
+        <div class="container-fluid text-center">
+            Copyright <i class="far fa-copyright"></i>
+        </div>
     </footer>
 </body>
 </html>
