--- a/portfolio.html
+++ b/portfolio.html
@@ -5,17 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
-    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">    
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <title>Ryan Udugampola - Portfolio</title>
 </head>
 <body>
     <!--Header which includes the logo and navigation links-->
-    <nav class="navbar navbar-light bg-light">
+    <nav class="navbar">
         <div class="container">
-            <!--Logo Div-->
-            <div class="logo">
+             <!--Logo Div-->
+            <div class="navbar-brand">
                 <h1>Ryan Udugampola</h1>
             </div>
     
@@ -35,14 +35,14 @@
     </nav>
 
     <!--Main Container-->
-    <div class="container-fluid">
+    <div class="content">
         <!--Content Container-->
         <div class="container">
             <!--Page Title at the top left of every content-container-->
             <div class="content-title">
                 <h1>Portfolio</h1>
             </div>
-            <div class="content clearfix">
+            <div>
                 <div class="project-tile">
                     <img id="project-thumbnail" src="assets/images/project1.jpg" alt="project1">
                     <div class="project-title">Machine Learning</div>
@@ -58,8 +58,10 @@
             </div>
         </div>
     </div>
-    <footer>
+    <footer class="footer">
+        <div class="container-fluid text-center">
             Copyright <i class="far fa-copyright"></i>
+        </div>
     </footer>
 </body>
 </html>
