completed basic portfolio page layout

--- a/portfolio.html
+++ b/portfolio.html
@@ -42,17 +42,18 @@
             <div class="content-title">
                 <h1>Portfolio</h1>
             </div>
-            <div>
-                <div class="project-tile">
-                    <img id="project-thumbnail" src="assets/images/project1.jpg" alt="project1">
+            <div class="row">
+               
+                <div class="col-lg-6">
+                    <img id="project-thumbnail" class="img-fluid" src="assets/images/project1.jpg" alt="project1">
                     <div class="project-title">Machine Learning</div>
                 </div>
-                <div class="project-tile">
-                    <img id="project-thumbnail" src="assets/images/project2.jpg" alt="project1">
+                <div class="col-lg-6">
+                    <img id="project-thumbnail" class="img-fluid" src="assets/images/project2.jpg" alt="project1">
                     <div class="project-title">The Internet of Things</div>
                 </div>
-                <div class="project-tile">
-                    <img id="project-thumbnail" src="assets/images/project3.png" alt="project1">
+                <div class="col-lg-6">
+                    <img id="project-thumbnail" class="img-fluid" src="assets/images/project3.png" alt="project1">
                     <div class="project-title">Cross Platform Applications</div>
                 </div>
             </div>
