fixed navbar menu collapse

--- a/contact.html
+++ b/contact.html
@@ -12,15 +12,20 @@
 </head>
 <body>
     <!--Header which includes the logo and navigation links-->
-    <nav class="navbar">
+    <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container">
-            <!--Logo Div-->
-            <div class="navbar-brand">
+                <!--Logo Div-->
+            <div class="navbar-brand" id="logo">
                 <h1>Ryan Udugampola</h1>
             </div>
-    
+
             <!--Navigation Links-->
-            <ul class="nav">
+
+            <button class="navbar-toggler" type="button" data-toggle="collapse">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <ul class="nav collapse navbar-collapse" id="navbarToggler">
                 <li class="nav-item">
                     <a class="nav-link" href="index.html">About</a>
                 </li>
