--- a/contact.html
+++ b/contact.html
@@ -47,21 +47,23 @@
             <div class="content-title">
                 <h1>Contact</h1>
             </div>
-            <form>
-                <div class="form-group">
-                    <label for="Name">Name</label>
-                    <input type="text" class="form-control" id="name" placeholder="John Smith">
-                </div>
-                <div class="form-group">
-                    <label for="Email">Email</label>
-                    <input type="email" class="form-control" id="email" placeholder="example@gmail.com">
-                </div>
-                <div class="form-group">
-                    <label for="Message">Message</label>
-                    <textarea class="form-control" id="message" rows="10"></textarea>
-                </div>
-                <button type="button" class="btn btn-primary">Submit</button>
-            </form>
+            <div class="content-offset">
+                <form>
+                    <div class="form-group">
+                        <label for="Name">Name</label>
+                        <input type="text" class="form-control" id="name" placeholder="John Smith">
+                    </div>
+                    <div class="form-group">
+                        <label for="Email">Email</label>
+                        <input type="email" class="form-control" id="email" placeholder="example@gmail.com">
+                    </div>
+                    <div class="form-group">
+                        <label for="Message">Message</label>
+                        <textarea class="form-control" id="message" rows="10"></textarea>
+                    </div>
+                    <button type="button" class="btn btn-primary">Submit</button>
+                </form>
+            </div>
         </div>
     </div>
     <footer class="footer">
