--- a/portfolio.html
+++ b/portfolio.html
@@ -47,8 +47,7 @@
             <div class="content-title">
                 <h1>Portfolio</h1>
             </div>
-            <div class="row">
-               
+            <div class="row content-offset">
                 <div class="col-lg-6">
                     <img id="project-thumbnail" class="img-fluid" src="assets/images/project1.jpg" alt="project1">
                     <div class="project-title">Machine Learning</div>
