--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <h1>About</h1>
             </div>
             <!-- Page Content -->
-            <div class="row">
+            <div class="row content-offset">
                 <div class='col-lg-12'>
                     <img id='profile-picture' class="img-fluid float-left" src="assets/images/headshot.JPG" alt="Photograph of Ryan" >    
                     <p>
